--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.0",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -24,6 +25,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
